[package]
name = "rconcmd"
version = "0.2.0"
authors = ["Fedcomp"]

[[bin]]
name = "async_rconcmd"
path = "src/bin/async_rconcmd.rs"

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
bytes = "0.4"
byteorder = "1"
clap = "2.19"
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
failure = "0.1.1"
tokio-dns-unofficial = "0.3.1"
