[package]
name = "rconcmd"
version = "0.2.0"
authors = ["Fedcomp"]

[features]
strict = [] # Treat warnings as a build error.

[dependencies]
bytes = "0.4.9"
byteorder = "1"
clap = "2.19"
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
failure = "0.1.1"
tokio-dns-unofficial = "0.3.1"
tokio-game-protocols = { git = "ssh://git@github.com:22/Fedcomp/tokio-game-protocols.git" }
log = "0.4.3"
env_logger = "0.5.12"
tokio-timer = "0.2.5"
lazy_static = "1.1.0"
